# resources

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
qml/: App.qml  Sidebar.qml  SidebarItem.qml  Theme.qml
qml/components/: CoreBar.qml  DashboardCard.qml  LineGraph.qml  MetricCard.qml  PageHeader.qml
qml/pages/: CpuPage.qml  DiskPage.qml  MemoryPage.qml  NetworkPage.qml  OverviewPage.qml  ProcessesPage.qml  SensorsPage.qml  SettingsPage.qml
src/: main.cpp  systeminfo.h  systemmonitor.cpp  systemmonitor.h
src/linux/: cpureader.cpp  cpureader.h  diskreader.cpp  diskreader.h  memreader.cpp  memreader.h  netreader.cpp  netreader.h  processreader.cpp  processreader.h  sensorsreader.cpp  sensorsreader.h
